--- a/Lesson7_Assignment/index.htm
+++ b/Lesson7_Assignment/index.htm
@@ -52,6 +52,7 @@
       <center><img src="brownie.jpg" alt="BrownieApplication" style="width:304px;height:228px;">
       </center>
    </article>
-
+<script src="jquery-1.11.1.min.js"></script>
+<script src="drill4.js"></script>
 </body>
 </html>
